--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Runation"
-meta_title: "Runation"
+meta_title: "Runation - No pain, no train, just fun!"
 meta_description: "Runation is the ultimate platform for passionate runners and outdoor enthusiasts. Track your progress, connect with a vibrant community, and challenge yourself to new heights. Empower your running journey with innovative tools and a dash of adventure!"
 meta_image: "logoRN.png"
