--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
 
 development:
   <<: *default
-  database: runation_development
+  database: runation_new_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -55,7 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: runation_test
+  database: runation_new_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,6 +79,4 @@ test:
 #
 production:
   <<: *default
-  database: runation_production
-  username: runation
-  password: <%= ENV["RUNATION_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
